<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:gravity="center_vertical"
    android:padding="20dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/checkedTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:textSize="30sp"
        android:text="@string/main_title"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_button_start" />

    <Button
        android:id="@+id/changeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_num_buttons_button" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_button" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_button" />

</LinearLayout>
