<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="${relativePackage}.${activityClass}" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_label_3" />

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_label_5" />

        <RadioButton
            android:id="@+id/radio7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_label_7" />

        <RadioButton
            android:id="@+id/radio9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_label_9" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroup1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/change_num_buttons_button"
        android:textColor="@color/text"
        android:textSize="24sp" />

</RelativeLayout>